hphp/hack/test/typecheck/trait_reuse/trait_diamond_no_attribute.php.exp
File "trait_diamond_no_attribute.php", line 15, characters 1-30:
Cannot use unstable feature: `method_trait_diamond` (Parsing[1002])
